--- a/styles.html
+++ b/styles.html
@@ -8,7 +8,7 @@
         <title>Styles</title>
         
         <style>
-            /*this is a class selector*/
+            /*this is a class selector*/ /* the selector closest to the bottom of your code will show*/
             p {
                 
             }
