--- a/css_combinators_challenge.html
+++ b/css_combinators_challenge.html
@@ -55,7 +55,8 @@
         <ul> <!-- ul is the sibling not li-->
             <li>make this text orange using a general sibling selector; 
                 
-                <div class="a"><em>and this phrase pink by combining 2 types of selectors</em></div>
+             <p class="a"><em>and this phrase pink by combining 2 types of selectors</em></p>
+            
             </li>
         </ul>
    
