--- a/week 3/openjam/index.html
+++ b/week 3/openjam/index.html
@@ -43,11 +43,11 @@
         </p>
         <h2>Sponsors</h2>
         <p id="sponsor_logos">
-            <img src="img/massey.svg" />
-            <img src="img/oracle.svg" />
+            <img id="massey" img src="img/massey.svg" />
+            <img id="oracle" img src="img/oracle.svg" />
         </p>
     </div>
-<!--
+
     <div id="why">
         <h1>Why?</h1>
         <p>
@@ -57,11 +57,13 @@
 
     <div id="where">
         <h1>Where?</h1>
+        <img id="map" img src="img/map.gif" / >
         <p>
             College of Creative Arts<br />
             Massey University, Wellington<br />
             Wallace st. (Entrance C), Mt. Cook<br />
         </p>
+        
 
     </div>
 
@@ -90,7 +92,7 @@
             <li><b>8.00 PM</b> &ndash; Prizes &amp; Wrap-Up</li>
         </ul>
     </div>
-
+<!--
     <div id="who">
         <h1>Who?</h1>
         <p>
