--- a/week 4/layout 1.html
+++ b/week 4/layout 1.html
@@ -29,8 +29,8 @@
      }
      
      #green {
-     backgrouond-color: green;
-     grid-column: 2/5; <*/start point/>
+     background-color: green;
+     grid-column: 2/5; 
      }
      </style>
      
