--- a/week 4/layout 1.html
+++ b/week 4/layout 1.html
@@ -11,7 +11,7 @@
      } 
      #container{
       display: grid;
-      grid-template-columns: 1fr, 1fr, 1fr, 1fr; </fr=fraction/>
+      grid-template-columns: 1fr, 1fr, 1fr, 1fr; /*fr=fraction*/
       margin: auto;
       max-width: 800px;
      }
