--- a/week 4/layout 1.html
+++ b/week 4/layout 1.html
@@ -11,7 +11,8 @@
      } 
      #container{
       display: grid;
-      grid-template-columns: 1fr, 1fr, 1fr, 1fr; </fr=fraction/>
+      grid-template-columns: 1fr, 1fr, 1fr; 
+      grid-template-rows: 1fr, 1fr, 1fr, 1fr;
       margin: auto;
       max-width: 800px;
      }
